[package]
name = "character_validator_firestore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
character_validator = { git = "https://github.com/WiggidyW/eve_character_validator_rs.git" }

hyper = { version = "0.14.26", features = ["http1", "client"] }
serde = { version = "1.0", features = ["derive"] }
firestore = { version = "0.32.0" }
